[metadata]
name=bitex-framework
version=1.0
url=https://github.com/crypto-toolbox/bitex-framework
download_url=https://github.com/crypto-toolbox/bitex-framework
project_urls =
    Bug Reports=https://github.com/crypto-toolbox/bitex-framework/issues
    Source=https://github.com/crypto-toolbox/bitex-framework

author=Nils Diefenbach
author_email=foss@deepbrook.io
classifiers = Development Status :: 3 - Alpha
              Intended Audience :: Developers
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
license= MIT
description= BitEx Base Framework
long_description=file: README.rst, CONTRIBUTING.rst, CHANGELOG.rst, LICENSE
long_description_content_type=text/x-rst
keywords=bitcoin,rest,api,http,exchange
;platforms=
;provides=
;requires=
;obsoletes=

[options]
install_requires =
    requests
    pluggy

tests_require =
    pytest
    pytest-cov
    tox

;entry_points =
;scripts =
;eager_resources =
;dependency_links =
;include_package_data =
;
;exclude_package_data =
;namespace_packages =
;py_modules =
;data_files =

package_dir=
    =src
packages=find:

[options.packages.find]
where=src


[options.extras_require]
dev=
    black
    isort
    flake8
test=
    pytest
    pytest-cov
    tox
ci=twine
